added async call to check login status

--- a/popup.html
+++ b/popup.html
@@ -77,6 +77,6 @@
         Pick a Problem!
       </button>
     </div>
-    <script src="popup.js"></script>
+    <script src="popup.js" type="module"></script>
   </body>
 </html>
