--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- <link href="node_modules\nouislider\dist\nouislider.css" rel="stylesheet">
+    <!-- 
+    Experimental Slider with ranges
+    <link href="node_modules\nouislider\dist\nouislider.css" rel="stylesheet">
     <script src="node_modules\nouislider\dist\nouislider.js"></script> -->
     <h2>LeetCode Problem Picker</h2>
     <div id="topics">
@@ -26,10 +28,8 @@
       <br>
       * Disabled, as currently no way to parse user's completed problems
     </div> -->
-    <br />
     <div id="acceptance">
-      <span class="label-text">Acceptance: </span>
-      <label for="target-acceptance">Target:</label>
+      <span class="label-text">Acceptance range: </span>
       <input
         class="input-acceptance"
         type="number"
