--- a/popup.html
+++ b/popup.html
@@ -79,7 +79,7 @@
       /><span class="label-text" id="max-ratio-val">3</span><br />
     </div>
     <div id="button-container">
-      <span id="result-span"></span>
+      <div id="result-div">test</div>
       <br>
       <button id="pick-problem-btn">
         Pick a Problem!
