update styling to get to working solution

--- a/popup.html
+++ b/popup.html
@@ -17,9 +17,9 @@
     <br />
     <div class="option-container">
       <span class="label-text">Difficulty: </span>
-      <button class="option-select" id="easy-btn">Easy</button>
-      <button class="option-select selected" id="med-btn">Med</button>
-      <button class="option-select" id="hard-btn">Hard</button>
+      <button class="option-select" class="easy-color" id="easy-btn">Easy</button>
+      <button class="option-select selected" class="med-color" id="med-btn">Med</button>
+      <button class="option-select" class="hard-color" id="hard-btn">Hard</button>
     </div>
     <br />
     <div class="option-container">
