--- a/popup.html
+++ b/popup.html
@@ -86,7 +86,10 @@
       /><span class="label-text" id="max-ratio-val">3</span><br />
     </div>
     <div id="button-container">
-      <div id="result-div"></div>
+      <div id="result-div">
+        <span id="result-span"></span>
+        <button id="mark-completed-btn">Mark completed</button>
+      </div>
       <br>
       <button id="pick-problem-btn">
         Pick a Problem!
