added last data scrape

--- a/popup.html
+++ b/popup.html
@@ -97,6 +97,10 @@
       <br>
       <button id="completed-problems-btn">Completed Problems</button>
     </div>
+    <br>
+    <span id="last-data-scrape">
+      Last data scrape: 3/21/2022
+    </span>
     <script src="popup.js" type="module"></script>
   </body>
 </html>
